--- a/backend/agritech/.gitignore
+++ b/backend/agritech/.gitignore
@@ -153,3 +153,12 @@ dmypy.json
 .prof
 
 # End of https://www.toptal.com/developers/gitignore/api/django
+# Exclude machine-specific vs code settings
+# Visual Studio Code #
+.vscode/*
+!.vscode/settings.json
+.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
