--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/home/emmanuel/anaconda3/bin/python",
+    "python.pythonPath": "/home/emmanuel/.virtualenvs/backend-PZXDD4uX/bin/python",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true
 }
