--- a/backend/agritech/requirements.txt
+++ b/backend/agritech/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.2.10
+astroid==2.5.6
 certifi==2020.11.8
 cffi==1.14.3
 chardet==3.0.4
@@ -11,6 +12,9 @@ django-environ==0.4.5
 django-rest-auth==0.9.5
 djangorestframework==3.12.1
 idna==2.10
+isort==5.8.0
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
 oauthlib==3.1.0
 Pillow==8.0.1
 pkg-resources==0.0.0
@@ -18,10 +22,13 @@ psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
+pylint==2.8.2
 python3-openid==3.2.0
 pytz==2020.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 six==1.15.0
 sqlparse==0.4.1
+toml==0.10.2
 urllib3==1.25.11
+wrapt==1.12.1
